# BEST_3823B1FI3

./: .gitignore  CMakeLists.txt  README.md
0-Begin_Task/: README.md  sum.h  test.c
1-type/: CMakeLists.txt
1-type/Task1/: def.h  test.c
1-type/Task2/: mul.h  test.c
1-type/byte/: README.md  byte.h  test.c
1-type/char-category/: README.md  char-category.h  test.c
1-type/clock/: README.md  clock.h  test.c
1-type/deadline/: README.md  deadline.h  test.c
1-type/decomposition/: README.md  decomposition.h  test.c
1-type/double/: README.md  double.h  test.c
1-type/module/: README.md  module.h  test.c
1-type/point/: README.md  point.h  test.c
1-type/seconds/: README.md  seconds.h  test.c
10-structs/: CMakeLists.txt
2-if_else_switch/: CMakeLists.txt
2-if_else_switch/Change/: README.md  change.h  test.c
2-if_else_switch/Chess/: README.md  chess.h  test.c
2-if_else_switch/Chocolate/: README.md  chocolate.h  test.c
2-if_else_switch/IceCream/: README.md  icecream.h  test.c
2-if_else_switch/LeapYear/: README.md  leap_year.h  test.c
2-if_else_switch/MonthDay/: README.md  monthday.h  test.c
2-if_else_switch/QuadraticEquation/: README.md  quadratic_equation.h  test.c
2-if_else_switch/TwoBoxes/: README.md  test.c  two_boxes.h
3-loop/: CMakeLists.txt
3-loop/bin_patterns/: README.md  find_bin_pattern.h  test.c
3-loop/calc_e/: README.md  calc_e.h  test.c
3-loop/count_max_digit/: README.md  count_max_digit.h  test.c
3-loop/fibonacci/: README.md  fibonacci.h  test.c
3-loop/find_digit/: README.md  find_digit.h  test.c
3-loop/find_elem/: README.md  find_elem.h  test.c
3-loop/integral/: README.md  integral.h  test.c
3-loop/limit/: README.md  limit.h  test.c
3-loop/numinvers/: README.md  numinvers.h  test.c
3-loop/row/: README.md  calc_row.h  test.c
4-array/: CMakeLists.txt
4-array/det/: README.md  determinant.h  test.c
4-array/find_hole/: README.md  hole_finder.h  test.c
4-array/get_percent/: README.md  calc_percent.h  test.c
4-array/kernel/: README.md  find_kernel.h  test.c
4-array/little_big_converter/: README.md  little_big_convert.h  test.c
4-array/max_local_min/: README.md  maxmin.h  test.c
4-array/more_on_left/: README.md  left_more.h  test.c
4-array/robot/: README.md  robot_move.h  test.c
5-pointer/: CMakeLists.txt
6-functions/: CMakeLists.txt
7-recursion/: CMakeLists.txt
8-strings/: CMakeLists.txt
9-files/: CMakeLists.txt
9-files/JSON_Parser/: README.md  json_parser.h  test.c
9-files/XML_Parser/: README.md  test.c  xml_parser.h
9-files/christmas_tree/: README.md  test.c  tree.h
9-files/fileinfo/: README.md  file_info.h  test.c
9-files/is_not_python/: README.md  error_finder.h  test.c
9-files/smyle_file/: README.md  smile_writer.h  test.c
9-files/what_word/: README.md  find_word.h  test.c
TestingFiles/: Task2_1.txt  Task2_2.txt  Task2_3.txt  Task2_4.txt  Task2_5.txt  Task3_1.txt  Task3_2.txt  (+10 more)
(+81 files in other folders)
