add_executable(seconds seconds/test.c)
add_executable(clock clock/test.c)
add_executable(module module/test.c)
add_executable(decomposition decomposition/test.c)
add_executable(point point/test.c)
add_executable(char-category char-category/test.c)
add_executable(double double/test.c)
add_executable(byte byte/test.c)
add_executable(deadline deadline/test.c)
