add_executable(leapyear LeapYear/test.c)
add_executable(chocolate Chocolate/test.c)
add_executable(change Change/test.c)
add_executable(icecream IceCream/test.c)
add_executable(QuadraticEquation QuadraticEquation/test.c)
add_executable(monthday MonthDay/test.c)
add_executable(chess Chess/test.c)
add_executable(twoboxes TwoBoxes/test.c)